--- a/backend/.env
+++ b/backend/.env
@@ -1,9 +1,14 @@
-MONGO_URI=mongodb+srv://headwayvisioncareer_db_user:q8N9Dz25tGtHjH6x@acvora.5ge7xnu.mongodb.net/universities
-UNI_MONGO_URI=mongodb+srv://headwayvisioncareer_db_user:q8N9Dz25tGtHjH6x@acvora.5ge7xnu.mongodb.net/universityDB
+MONGO_URI=mongodb+srv://acvora55_db_user:SEYS7uDxMjuXz6N4@acvora.1djgpoq.mongodb.net/universities?retryWrites=true&w=majority
+
+UNI_MONGO_URI=mongodb+srv://acvora55_db_user:SEYS7uDxMjuXz6N4@acvora.1djgpoq.mongodb.net/universityDB?retryWrites=true&w=majority
+
 JWT_SECRET=mySuperSecretKey123
+
 EMAIL_USER=yourgmail@gmail.com
 EMAIL_PASS=yourapppassword
+
 CLOUD_NAME=dapjccnab
 CLOUD_API_KEY=647191322632221
 CLOUD_API_SECRET=uKNd3uXslYl_ZrHsrr2iwsofuZE
+
 PORT=5000
